# TradingBotMiroFish

./: .gitignore  AUDIT_COMPLETE.txt  AUDIT_FINDINGS_INDEX.md  AUDIT_INDEX.md  CRITICAL_FINDINGS.txt  INTEGRITY_AUDIT_FINAL_VERDICT.md  LIVE_ALERT_MODE_SUMMARY.md  LIVE_RESEARCH_READY.txt  LIVE_SHADOW_AUDIT_SUMMARY.md  LIVE_SHADOW_INIT_COMPLETE.md  LIVE_SHADOW_MODE_INDEX.md  LIVE_SHADOW_QUICK_REF.txt  LIVE_SHADOW_STATUS.md  LIVE_SHADOW_SUMMARY_FOR_MAIN_AGENT.txt  PHASE1_5_VERDICT.md  PHASE1_6_FINAL_ANALYSIS.md  PHASE1_6_PHASE2_STATUS.md  PHASE1_AUDIT_SUMMARY.txt  PHASE1_FINAL_ANALYSIS.md  PHASE_1_5_COMPLETION_REPORT.md  PHASE_1_5_INDEX.md  README.md  REGIME_AUDIT_FINAL_REPORT.md  REPLAY_VALIDATION_PLAN.md  REPLAY_VALIDATION_RESULTS.txt  RESEARCH_COORDINATION.md  SUBAGENT_COMPLETION_REPORT.md  VALIDATION_CHECKPOINT.txt  analysis_expectancy.py  analysis_templates.py  calibration_final_report.py  calibration_replay.py  calibration_replay_v2.py  calibration_validator.py  calibration_volatility_analysis.py  generate_phase1_5_comparison.py  generate_replay_reports.py  live_alert_system.py  live_shadow_continuous.py  live_shadow_monitor.py  (+30 more)
market-swarm-lab/: .env.example  .gitignore  ADAPTIVE_REGIME_FINAL_REPORT.md  ADAPTIVE_REGIME_INDEX.md  BOOKMAP_DIAGNOSTIC_SUMMARY.md  FIRST_25_TRADES_SUMMARY.md  PHASE2_ANALYSIS_INDEX.md  PHASE2_CRITICAL_FINDINGS.md  PHASE2_FINAL_STATUS.md  PHASE2_READINESS.md  PHASE2_REPLAY_COMPLETION_REPORT.md  PHASE2_VALIDATION_SUCCESS.md  README.md  RESEARCH_EXPORTS_MANIFEST.md  RESEARCH_PHASE_2_COMPLETE.md  RESEARCH_PHASE_2_SUMMARY.md  RESULTS_PLAN_A.md  (+6 more)
(+234 files in other folders)
