[project]
name = "market-swarm-lab"
version = "0.1.0"
description = "Local-first market forecasting and simulation prototype combining MiroFish-style simulation, TimesFM-compatible forecasting, and multi-source ingestion."
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.1",
  "psycopg[binary]>=3.2.0",
  "redis>=5.0.7",
  "pandas>=2.0.0",
  "pyarrow>=14.0.0",
  "filelock>=3.13",
  # nubra-sdk is published on TestPyPI. Install with:
  #   pip install -i https://test.pypi.org/simple/ --extra-index-url https://pypi.org/simple nubra-sdk
  # Pin the version once verified in UAT (research saw v0.4.4; installed actual package is nubra_python_sdk).
  "nubra-sdk"
]

[tool.setuptools]
py-modules = []

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
